GenomeSpaceTesting/reports/24-07-15/16.10.58.txt
  File "./source/GSchrome.py", line 31
    if chrome_driver_path != None
                                ^
SyntaxError: invalid syntax
